=== ongoing ===


=== 0.2.3 ===

- fixed typo in setup.py

=== 0.2.2 ===

- Exchanged dependency of cmsplugin-blog for django-multilingual-news

=== 0.2.1 ===

- Added goals, sectors and countries to the context of the
  GoodPracticeExampleListView

=== 0.2 ===

- Added ListView for GoodPracticeExample objects
- Added CMS App-hook

=== 0.1 ===

Initial commit